--- a/README.mkd
+++ b/README.mkd
@@ -11,13 +11,14 @@ PowerGrASP results, compared to the existing BIOTEC tool, can be found in the [r
 
     pip install powergrasp
 
-Just be sure that, in the library installation directory, for pyasp, you have the binaries *gringo4* and *clasp* installed.
+Just be sure that, in the library installation directory, for [pyasp](https://github.com/sthiele/pyasp),
+you have the binaries *gringo4* and *clasp* installed.
 In case of a system-wide installation, these binaries are generally correctly installed and can be found in */usr/lib/python3.5/site-packages/pyasp/bin/*.
 The binaries, if not properly installed by pip, can be found on the sourceforge website:
 - [gringo4](http://sourceforge.net/projects/potassco/files/gringo/4.5.3/), in version 4.5.3, that probably needs to be renamed from *gringo* to *gringo4*.
 - [clasp](http://sourceforge.net/projects/potassco/files/clasp/3.1.3/), in version 3.1.3.
 
-A magical workaround is to use the *--no-cache-dir* option of pip for get the binaries properly installed, even in local or with a virtualenv:
+A magical workaround is to use the *--no-cache-dir* option of pip for to the binaries properly installed, even in local or with a virtualenv:
 
     pip install powergrasp --no-cache-dir
 
@@ -63,7 +64,7 @@ Other formats will be supported in the future.
 #### Output
 
 ##### Bubble formatted file
-The output of PowerGrASP is a *Bubble* formatted file. This file can be used for get a visualization of the compressed graph.
+The output of PowerGrASP is a *Bubble* formatted file. This file can be used to get a visualization of the compressed graph.
 The format *Bubble* is an endemic format designed by Royer et Al for power graph describing.
 
 Bubble files can be used in several ways:
@@ -79,7 +80,7 @@ This tool allow to print a bubble file without Cytoscape usage, with something l
 
     java -jar Oog.jar -inputfiles=path/to/bubble.bbl -img -f=png
 
-Add *&>/dev/null* for prevent any logging output.
+Add *&>/dev/null* to prevent any logging output.
 
 
 
