--- a/README.mkd
+++ b/README.mkd
@@ -58,6 +58,7 @@ The supported input file formats are currently :
 - ASP: atoms edge/2, with edge(X,Y) describing a link between nodes X and Y.
 - SBML: a regular SBML file, when species and reactions will be treated as nodes.
 - GML: a regular Graph Modeling Language file, readable by networkx python module.
+- GraphML: a regular [GraphML](http://graphml.graphdrawing.org/) file, readable by [networkx python module](https://networkx.github.io/documentation/networkx-1.9/reference/readwrite.graphml.html).
 
 Example of inputs can be found in the [powergrasp/test/](https://github.com/Aluriak/PowerGrASP/blob/0.4.x/powergrasp/tests) directory.
 Some of these are simple and used for unit testing. Take a look to [ddiam](https://github.com/Aluriak/PowerGrASP/blob/0.4.x/powergrasp/tests/double_biclique.lp), [coli](https://github.com/Aluriak/PowerGrASP/blob/0.4.x/powergrasp/tests/ecoli_2896-23.gml) or [star](https://github.com/Aluriak/PowerGrASP/blob/0.4.x/powergrasp/tests/star.lp).
