--- a/README.mkd
+++ b/README.mkd
@@ -31,8 +31,7 @@ PowerGrASP can be used as a script:
 Or can be embedded in any python program:
 
     import powergrasp
-
-    powergrasp.compress('human_proteom.lp', 'for_cytoscape.bbl')
+    powergrasp.recipes.powergraph('human_proteom.lp', 'for_cytoscape.bbl')
 
 
 ## Help & Details
